--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
+    "@mui/material": "^6.1.2",
+    "@mui/system": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "prop-types": "^15.8.1",
@@ -24,6 +25,9 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.1.14",
+    "use-debounce": "^10.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
