--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,7 +13,7 @@
     "noEmit": true,
 
     /* Linting */
-    "strict": true,
+    "strict": false, //true
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
