--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,9 +7,10 @@
     "skipLibCheck": true,
 
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": false,
+    "noEmit": true,
     "jsx": "react-jsx",
 
     "strict": true,
